# Fixed-Noise-Diffusion

./: .gitignore  CITATION.cff  README.md  RELEASE.md  pyproject.toml
.github/actions/ensure-torchvision-dataset/: action.yml  ensure_dataset.py
.github/actions/resolve-dataset-cache/: action.yml
.github/workflows/: cifar10-data-smoke.yml  mega-linter.yml  prepare-large-dataset-caches.yml  wp2-celeba64-validation.yml  wp2-cifar10-pool-dtype-control.yml  wp2-cifar10-pool-seed-robustness.yml  wp2-cifar10-reviewer-controls.yml  wp2-stl10-validation.yml
docs/: environment.md  large_dataset_caches.md  wp2_pool_dtype_control.md
src/fixed_noise_diffusion/: evaluate_pool_generalization.py  evaluate_timestep_diagnostics.py  logging_utils.py  summarize_denoising_gaps.py  summarize_phase_diagram.py  summarize_pool_dtype_control.py  summarize_sample_quality.py  summary_utils.py  train.py  utils.py
src/fixed_noise_diffusion/configs/: celeba64_base.yaml  cifar10_base.yaml  cifar10_fixed_pool_100k.yaml  cifar10_fixed_pool_10k.yaml  cifar10_fixed_pool_1k.yaml  cifar10_fixed_pool_whitened_10k.yaml  cifar10_gaussian.yaml  smoke.yaml  stl10_base.yaml
src/fixed_noise_diffusion/scripts/: run_wp2_cifar10_evidence_stack.ps1  run_wp2_cifar10_evidence_stack.sh
tests/: test_logging_utils.py  test_noise.py  test_summarize_pool_dtype_control.py  test_summarize_sample_quality.py  test_train_accumulation.py  test_utils.py
