[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixed-noise-diffusion"
version = "0.1.0"
description = "Minimal CIFAR DDPM stack for fixed Gaussian noise pool experiments."
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
dependencies = [
  "gdown>=5.1",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pillow>=10.0",
  "pyyaml>=6.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
metrics = [
  "torchmetrics[image]>=1.4",
  "torch-fidelity>=0.3",
]
test = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fixed_noise_diffusion = ["configs/*.yaml", "scripts/*.ps1"]

[tool.mypy]
check_untyped_defs = true

[tool.ruff]
line-length = 180

[tool.isort]
profile = "black"

[tool.pylint.MAIN]
py-version = "3.13"
fail-under = 10
ignore = ["CVS"]
ignored-modules = ["pyrecest.backend", "healpy"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "raw-checker-failed",
  "bad-inline-option",
  "locally-disabled",
  "file-ignored",
  "suppressed-message",
  "deprecated-pragma",
  "use-symbolic-message-instead",
  "C",
  "W0221",
  "redefined-builtin",
  "cyclic-import",
]

[tool.pylint.FORMAT]
max-line-length = 180

[tool.pylint.DESIGN]
max-args = 6
max-parents = 15
max-public-methods = 25
min-public-methods = 0
